# csvprogs

./: .gitignore  LICENSE  Makefile  README.md  TODO.txt  pyproject.toml  tox.ini  weight.sh
csvprogs/: LICENSE  Makefile  args.py  atr.py  bars.py  common.py  csv2csv.py  csv2json.py  csv2xls.py  csvcat.py  csvcollapse.py  csvfill.py  csvmerge.py  csvplot.py  csvsort.py  dsplit.py  ewma.py  extractcsv.py  filter.py  html2csv.py  hull.py  interp.py  keltner.py  mean.py  mvavg.py  pyproject.toml  regress.py  roundtime.py  sharpe.py  shuffle.py  sigavg.py  spline.py  square.py  take.py  xform.py  xls2csv.py
csvprogs/csvprogs/: csv2json.py  csvcat.py  csvmerge.py  csvsort.py  extractcsv.py  mvavg.py  sharpe.py  sigavg.py
csvprogs/src/: csv2csv.py  csv2json.py  csv2xls.py  csvcollapse.py  csvfill.py  csvmerge.py  csvsort.py  extractcsv.py  html2csv.py  interp.py  xls2csv.py
csvprogs/src/csvprogs/: csv2xls.py  csvcat.py  csvcollapse.py  csvmerge.py  extractcsv.py  interp.py  xls2csv.py
csvprogs/tests/: test_csv2csv.py  test_csvfill.py  test_square.py
data_filters/: Makefile  pyproject.toml
data_filters/data_filters/: atr.py  bars.py  dsplit.py  ewma.py  filter.py  hull.py  keltner.py  mean.py  mvavg.py  regress.py  sharpe.sh  sigavg.py  spline.py  square.py  take.py  xform.py
data_filters/src/: bars.py  ewma.py  filter.py  mean.py  mvavg.py  regress.py  roundtime.py  shuffle.py  sigavg.py  spline.py  square.py  take.py  xform.py
data_filters/tests/: test_ewma.py  test_square.py  test_xform.py
mpl/: Makefile  README.md  pyproject.toml
mpl/csvplot/: csvplot.py
mpl/src/: mpl.py
mpl/src/csvplot/: csvplot.py
scripts/: weight.sh
share/man/rst1/: data_filters.rst
tests/: __init__.py  test_atr.py  test_bars.py  test_common.py  test_csv2csv.py  test_csv2json.py  test_csv2xls.py  test_csvcat.py  test_csvcollapse.py  test_csvfill.py  test_csvmerge.py  test_csvplot.py  test_csvsort.py  test_dsplit.py  test_ewma.py  test_extractcsv.py  test_filter.py  test_html2csv.py  test_hull.py  test_interp.py  test_keltner.py  test_mean.py  test_mvavg.py  test_regress.py  test_sharpe.py  test_shuffle.py  test_sigavg.py  test_spline.py  test_square.py  test_take.py  test_xform.py  test_xls2csv.py
tests/data/: IWY-a.csv  IWY-b.csv  IWY-c.csv  IWY-d.csv  NVDA.csv  SPY-atr.csv  SPY-daily.csv  SPY.csv  SPY.pck  SPY.xls  VRTX-daily.csv  VRTX-missing.csv  VRTX.csv  bad-date-1.csv  bad-date-2.csv  batch-example.csv  cal.csv  cal.html  empty.csv  filled.csv  first.csv  merged-secs.csv  merged-short.csv  merged.csv  random.csv  second-short.csv  second.csv  split-exp.csv  split-in.csv  weight.csv  xl-date.xls
