[build-system]
requires = [
    "setuptools>=63.0",
    "trove-classifiers",
    "wheel",
]

build-backend = "setuptools.build_meta"

[project]
name = "csvprogs"
version = "1.1.2"
authors = [
    { name = "Skip Montanaro", email = "skip.montanaro@gmail.com" },
]
description = "Various programs operating on CSV files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.2",
    "atpublic>=3.1",
    "numpy>=1.22",
    "python-dateutil>=2.8.2",
    "pandas>=1.5.2",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/smontanaro/csvprogs/tree/main/csvprogs"
"Bug Tracker" = "https://github.com/smontanaro/csvprogs/issues"

[project.scripts]
    csv2csv = "csvprogs.csv2csv:main"
    csv2json = "csvprogs.csv2json:main"
    csv2xls = "csvprogs.csv2xls:main"
    csvcat = "csvprogs.csvcat:main"
    csvcollapse = "csvprogs.csvcollapse:main"
    csvfill = "csvprogs.csvfill:main"
    csvmerge = "csvprogs.csvmerge:main"
    csvsort = "csvprogs.csvsort:main"
    extractcsv = "csvprogs.extractcsv:main"
    html2csv = "csvprogs.html2csv:main"
    interp = "csvprogs.interp:main"
    xml2csv = "csvprogs.xml2csv:main"
    mpl = "csvprogs.csvplot:main"
    csvplot = "csvprogs.csvplot:main"
    atr = "csvprogs.atr:main"
    bars = "csvprogs.bars:main"
    dsplit = "csvprogs.dsplit:main"
    ewma = "csvprogs.ewma:main"
    filter = "csvprogs.filter:main"
    hull = "csvprogs.hull:main"
    keltner = "csvprogs.keltner:main"
    mean = "csvprogs.mean:main"
    mvavg = "csvprogs.mvavg:main"
    regress = "csvprogs.regress:main"
    roundtime = "csvprogs.roundtime:main"
    sharpe = "csvprogs.sharpe:main"
    shuffle = "csvprogs.shuffle:main"
    sigavg = "csvprogs.sigavg:main"
    spline = "csvprogs.spline:main"
    square = "csvprogs.square:main"
    take = "csvprogs.take:main"
    xform = "csvprogs.xform:main"
