[build-system]
requires = [
    "setuptools>=63.0",
    "trove-classifiers",
    "wheel",
]

build-backend = "setuptools.build_meta"

[project]
name = "csvprogs"
version = "2.0.0"
authors = [
    { name = "Skip Montanaro", email = "skip.montanaro@gmail.com" },
]
description = "Various programs operating on CSV files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "atpublic>=3.1",
    "matplotlib>=3.5.2",
    "numpy>=1.22",
    "pandas>=1.5.2",
    "python-dateutil>=2.8.2",
    "scipy>=1.15.1",
    "unum>=4.2.1",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
    "openpyxl>=3.1.5",
]

[tool.setuptools.packages.find]
    where = ["."]
    include = ["csvprogs"]
    namespaces = false

[project.urls]
"Homepage" = "https://github.com/smontanaro/csvprogs/tree/main/csvprogs"
"Bug Tracker" = "https://github.com/smontanaro/csvprogs/issues"

[project.scripts]
    atr = "csvprogs.atr:main"
    bars = "csvprogs.bars:main"
    common = "csvprogs.common:main"
    csv2csv = "csvprogs.csv2csv:main"
    csv2json = "csvprogs.csv2json:main"
    csv2xls = "csvprogs.csv2xls:main"
    csvcat = "csvprogs.csvcat:main"
    csvcollapse = "csvprogs.csvcollapse:main"
    csvfill = "csvprogs.csvfill:main"
    csvmerge = "csvprogs.csvmerge:main"
    csvplot = "csvprogs.csvplot:main"
    csvsort = "csvprogs.csvsort:main"
    dsplit = "csvprogs.dsplit:main"
    ewma = "csvprogs.ewma:main"
    extractcsv = "csvprogs.extractcsv:main"
    filter = "csvprogs.filter:main"
    html2csv = "csvprogs.html2csv:main"
    hull = "csvprogs.hull:main"
    interp = "csvprogs.interp:main"
    keltner = "csvprogs.keltner:main"
    mean = "csvprogs.mean:main"
    mvavg = "csvprogs.mvavg:main"
    regress = "csvprogs.regress:main"
    sharpe = "csvprogs.sharpe:main"
    shuffle = "csvprogs.shuffle:main"
    sigavg = "csvprogs.sigavg:main"
    spline = "csvprogs.spline:main"
    square = "csvprogs.square:main"
    take = "csvprogs.take:main"
    xform = "csvprogs.xform:main"
    xls2csv = "csvprogs.xls2csv:main"
