[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-mpl-plot"
version = "1.0.0"
authors = [
  { name="Skip Montanaro", email="skip.montanaro@gmail.com" },
]
description = "Matplotlib-based CSV file plotter"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smontanaro/csvprogs/tree/main/mpl"
"Bug Tracker" = "https://github.com/smontanaro/csvprogs/issues"
