[build-system]
requires = [
    "setuptools>=63.0",
    "trove-classifiers",
    "wheel",
]

build-backend = "setuptools.build_meta"

[project]
name = "csvplot"
version = "1.0.5"
authors = [
    { name = "Skip Montanaro", email = "skip.montanaro@gmail.com" },
]
description = "Matplotlib-based CSV file plotter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.2",
    "atpublic>=3.1",
    "numpy>=1.22",
]

[project.urls]
"Homepage" = "https://github.com/smontanaro/csvprogs/tree/main/mpl"
"Bug Tracker" = "https://github.com/smontanaro/csvprogs/issues"

[project.scripts]
    mpl = "csvplot.csvplot:main"
    csvplot = "csvplot.csvplot:main"
